# anomoly-detector

./: README.md  docker-compose.yml  makefile  pyproject.toml
anomoly_detector/jupyter/: Dockerfile  hello-world.ipynb
jupyter/: Dockerfile  pyproject.toml  requirements.txt  train.ipynb
service/: Dockerfile  model.joblib  pyproject.toml
service/api/: main.py
