[tool.poetry]
name = "jupyter-notebook"
version = "0.1.0"
description = ""
authors = ["ikarabulut <i.karabulut93@gmail.com>"]


[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pandas = "^2.1.3"
plotly = "^5.18.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"
numpy = "^1.26.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
